# SEF-SDK

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  LICENSE.md  README.md  build-instructions.html  build.sh  definitions.html  index.html  intended-audience.html  overview.html  security-model.html
CLI/: cli-targets.html  extending-cli.html  overview.html
Driver/: overview.html
FIO/: overview.html
FTL/: block.html  flash-translation-layer.html  ftl-api.html  garbage-collection.html  instrumentation.html  logging.html  overview.html  persistence.html  superblock-management.html
NVMe-CLI/: overview.html
QEMU/: overview.html
assets/css/: styles.caa6f932.css
assets/js/: 03d50b88.3e9ecd02.js  080f2dfa.f78707be.js  1315cb7f.0b4a70cb.js  14ca2da3.4c3c301e.js  14edac4b.283ec0a4.js  17896441.52baeb55.js  185f83bd.e81d2d86.js  1be78505.f2f7e5de.js  1db64337.2727d419.js  444bc214.e499385b.js  5b3e45ef.b7feaccc.js  63d2be0c.bf503d7e.js  6d877609.fda34c70.js  6e5cfd3c.54188a6d.js  7085a27d.13c98c46.js  741bb0cb.6c71af5b.js  84048798.87a762af.js  84a80003.02848a19.js  935f2afb.05d9425e.js  972.8a06de48.js  980cf199.ccd89490.js  9d6f62e4.8acd4e44.js  ac8cace5.7f7b21a6.js  bcacd1ac.36e535e4.js  c0377216.8d39f9b4.js  d76bfd7a.d8088a1b.js  e40fdbd7.a4db5782.js  fbeb68d1.52ff554a.js  main.82698aa3.js  runtime~main.9383a551.js
cli/: .gitignore  CMakeLists.txt  build.sh  sef-cli.1  sef-cli_completion.sh
cli/src/: CMakeLists.txt  cli-engine.c  cli-engine.h  cli-helper.c  cli-helper.h  engine-option.c  engine-option.h  io-helper.c  io-helper.h  sef-cli.c  sef-helper.c  sef-helper.h
cli/src/devtool/: auto-complete.c  auto-complete.h  dev-tool.c  dev-tool.h  man-page.c  man-page.h
cli/src/engines/: ftl.c  null.c  qos-domain.c  sef-unit.c  shell.c  virtual-device.c
cli/src/utils/: dlist.c  dlist.h  sef-event.c  sef-event.h  str-builder.c  str-builder.h  str-error.c  str-error.h
cmake/: sdkVersion.cmake
driver/: .gitignore  Makefile  sef.h  sef_aen.c  sef_aen.h  sef_core.c  sef_defs.h  sef_sys.c
fio/: Makefile  SEF-FIO.patch  configure
format/: .clang-format
ftl/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
ftl/src/: CMakeLists.txt  config.h  data-tree-object.c  data-tree-object.h  die-stats.c  die-stats.h  flash-translation.c  flash-translation.h  garbage-collection.c  garbage-collection.h  log-manager.c  log-manager.h  manual-copy.c  manual-copy.h  persistence.c  persistence.h  sef-block-module.c  sef-block-module.h  sef-notification.c  sef-notification.h  sef-utils.c  sef-utils.h  superblock.c  superblock.h
ftl/src/utils/: buddy.c  buddy.h  crc32.c  crc32.h  dlist.c  dlist.h  file-logger.c  file-logger.h  gateway.c  gateway.h  hashset.c  hashset.h  instrumentation.c  instrumentation.h  iov-helper.c  iov-helper.h  pw-counter.c  pw-counter.h  sef-event.h  sef-slist.c  sef-slist.h
lib/: .gitignore  CMakeLists.txt  build.sh
lib/src/lib/: CMakeLists.txt  common.h  condcounter.c  condcounter.h  debug.c  debug.h  device_info.c  device_info.h  device_io.c  device_io.h  dlist.c  dlist.h  fpw-counter.c  fpw-counter.h  io_thread.c  io_thread.h  io_thread_pool.c  io_thread_pool.h  locklessHash.c  locklessHash.h  nvme_ioctl.h  request.c  request.h  sef-event.c  sef-slist.c  sef-slist.h  sef_api.c  sef_api.h  sef_cmd.c  sef_cmd.h  ulog.c  ulog.h
linux/: SEF-LINUX.patch  apply_patch.sh
nvme-cli/: SEF-NVME.patch  apply_patch.sh
qemu/: SEF-QEMU.patch  configure
